public class TextDocument extends File {

    public TextDocument(TypeOfFile typeOfFile, User user, String description, float fileSize) {
        super(typeOfFile, user, description, fileSize);
    }
}
