@startuml

title __CONTENTMANAGMENTSYSTEM's Class Diagram__\n

  package  {
    class AdminUser {
    }
  }
  

  package  {
    interface Editable {
    }
  }
  

  package  {
    abstract class File {
    }
  }
  

  package  {
    class FileStorageList {
    }
  }
  

  package  {
    class FileStorageSet {
    }
  }
  

  package  {
    class MediaFile {
    }
  }
  

  package  {
    class NotRegisteredUser {
    }
  }
  

  package  {
    class Pdf {
    }
  }
  

  package  {
    class Picture {
    }
  }
  

  package  {
    class Program {
    }
  }
  

  package  {
    class RegularUser {
    }
  }
  

  package  {
    class TextDocument {
    }
  }
  

  package  {
    enum TypeOfFile {
    }
  }
  

  package  {
    abstract class User {
    }
  }
  

  package  {
    class Validator {
    }
  }
  

  package  {
    class Video {
    }
  }
  

  package  {
    class Word {
    }
  }
  

  AdminUser -up-|> RegularUser
  File o-- TypeOfFile : typeOfFile
  File o-- User : user
  MediaFile -up-|> Editable
  MediaFile -up-|> File
  NotRegisteredUser -up-|> User
  Pdf -up-|> TextDocument
  Picture -up-|> MediaFile
  RegularUser -up-|> NotRegisteredUser
  TextDocument -up-|> File
  User o-- Validator : validator
  Video -up-|> MediaFile
  Word -up-|> Editable
  Word -up-|> TextDocument


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
